--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "prepare": "node build/build.js"
+    "prepare": "node build/build.js",
+    "test": "node build/test.js"
   },
   "workspaces": ["packages/*"],
   "devDependencies": {
