--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "private": true,
   "scripts": {
     "prepare": "node build/build.js",
-    "test": "node build/test.js"
+    "test": "node build/test.js",
+    "start": "node build/watch.js",
+    "precommit": "node build/lint.js"
   },
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "chalk": "^2.4.1",
+    "figures": "^2.0.0",
     "husky": "^0.14.3",
     "lerna": "^2.9.0",
-    "prettier": "1.13.4",
+    "prettier": "1.13.5",
     "signale": "^1.1.0",
     "typescript": "^2.9.1"
   }
