--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "devDependencies": {
     "chalk": "^2.4.1",
+    "esm": "^3.0.51",
     "figures": "^2.0.0",
     "husky": "^0.14.3",
     "ignore": "^3.3.8",
