--- a/packages/alfa-act/package.json
+++ b/packages/alfa-act/package.json
@@ -13,7 +13,8 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "dependencies": {
-    "@siteimprove/alfa-dom": "^0.0.0"
+    "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-http": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-jsx": "^0.0.0",
