--- a/packages/alfa-scrape/package.json
+++ b/packages/alfa-scrape/package.json
@@ -14,6 +14,7 @@
   "types": "src/index.d.ts",
   "dependencies": {
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-http": "^0.0.0",
     "@types/puppeteer": "^1.3.2",
     "puppeteer": "^1.4.0"
   },
