--- a/packages/alfa-scrape/package.json
+++ b/packages/alfa-scrape/package.json
@@ -15,8 +15,9 @@
   "dependencies": {
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-http": "^0.0.0",
-    "@types/puppeteer": "^1.3.2",
-    "puppeteer": "^1.4.0"
+    "@types/node": "^10.3.4",
+    "@types/puppeteer": "^1.3.4",
+    "puppeteer": "^1.5.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
