--- a/packages/alfa-jsx/package.json
+++ b/packages/alfa-jsx/package.json
@@ -12,10 +12,8 @@
   "repository": "https://github.com/siteimprove/alfa/tree/master/packages/alfa-jsx",
   "main": "src/index.js",
   "types": "src/index.d.ts",
-  "dependencies": {
-    "@siteimprove/alfa-util": "^0.0.0"
-  },
   "devDependencies": {
-    "@siteimprove/alfa-test": "^0.0.0"
+    "@siteimprove/alfa-test": "^0.0.0",
+    "@siteimprove/alfa-util": "^0.0.0"
   }
 }
