--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
+    "resolveJsonModule": true,
     "sourceMap": true,
     "strict": true,
     "stripInternal": true,
