--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "jsx": "react",
     "jsxFactory": "jsx",
     "lib": ["es2015"],
-    "moduleResolution": "node",
+    "module": "commonjs",
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "resolveJsonModule": true,
