--- a/packages/alfa-act/package.json
+++ b/packages/alfa-act/package.json
@@ -23,7 +23,8 @@
   "types": "src/index.d.ts",
   "dependencies": {
     "@siteimprove/alfa-dom": "^0.0.0",
-    "@siteimprove/alfa-http": "^0.0.0"
+    "@siteimprove/alfa-http": "^0.0.0",
+    "@siteimprove/alfa-json-ld": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-jsx": "^0.0.0",
