--- a/packages/alfa-act/package.json
+++ b/packages/alfa-act/package.json
@@ -17,6 +17,7 @@
     "Búgvi Benjamin Magnussen <bbm@siteimprove.com>",
     "Kasper Kronborg Isager <kki@siteimprove.com>",
     "Niclas Hedam <nhe@siteimprove.com>",
+    "Per Jakobsen <pja@siteimprove.com>",
     "Tobias Christian Jensen <tcj@siteimprove.com>"
   ],
   "repository": "https://github.com/siteimprove/alfa",
