--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -6,6 +6,7 @@
     { "path": "alfa-aria" },
     { "path": "alfa-assert" },
     { "path": "alfa-chai" },
+    { "path": "alfa-collection" },
     { "path": "alfa-compatibility" },
     { "path": "alfa-crypto" },
     { "path": "alfa-css" },
