--- a/packages/alfa-puppeteer/package.json
+++ b/packages/alfa-puppeteer/package.json
@@ -28,10 +28,7 @@
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-guards": "^0.0.0",
     "@types/puppeteer": "^1.20.1",
-    "puppeteer": "^1.20.0",
-    "rollup": "^1.23.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-terser": "^5.1.2"
+    "puppeteer": "^1.20.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
