--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -56,6 +56,7 @@
     { "path": "alfa-rules" },
     { "path": "alfa-scrape" },
     { "path": "alfa-set" },
+    { "path": "alfa-sequence" },
     { "path": "alfa-slice" },
     { "path": "alfa-test" },
     { "path": "alfa-thunk" },
