--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         node-version: [10, 12]
+    name: Build
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
