--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    name: Publish
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
