--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -11,6 +11,10 @@
     "src/node/comment.ts",
     "src/node/document.ts",
     "src/node/element.ts",
+    "src/node/element/predicate.ts",
+    "src/node/element/predicate/has-id.ts",
+    "src/node/element/predicate/has-name.ts",
+    "src/node/element/predicate/has-namespace.ts",
     "src/node/fragment.ts",
     "src/node/shadow.ts",
     "src/node/slot.ts",
