--- a/packages/alfa-branched/tsconfig.json
+++ b/packages/alfa-branched/tsconfig.json
@@ -4,16 +4,13 @@
   "files": ["src/branched.ts", "src/index.ts", "test/branched.spec.ts"],
   "references": [
     {
-      "path": "../alfa-applicative"
+      "path": "../alfa-collection"
     },
     {
       "path": "../alfa-equatable"
     },
     {
-      "path": "../alfa-foldable"
-    },
-    {
-      "path": "../alfa-functor"
+      "path": "../alfa-hash"
     },
     {
       "path": "../alfa-iterable"
@@ -26,9 +23,6 @@
     },
     {
       "path": "../alfa-mapper"
-    },
-    {
-      "path": "../alfa-monad"
     },
     {
       "path": "../alfa-option"
