--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -40,6 +40,7 @@
     "src/value/transform/translate.ts",
     "src/value/unit.ts",
     "src/value/url.ts",
+    "test/syntax/declaration.spec.ts",
     "test/syntax/lexer.spec.ts"
   ],
   "references": [
