--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -104,6 +104,7 @@
     "src/sia-r75/rule.ts",
     "src/sia-r8/rule.ts",
     "src/sia-r80/rule.ts",
+    "src/sia-r81/rule.ts",
     "src/sia-r82/rule.ts",
     "src/sia-r83/rule.ts",
     "src/sia-r9/rule.ts",
@@ -129,6 +130,7 @@
     "test/sia-r74/rule.spec.tsx",
     "test/sia-r75/rule.spec.tsx",
     "test/sia-r80/rule.spec.tsx",
+    "test/sia-r81/rule.spec.tsx",
     "test/sia-r82/rule.spec.tsx",
     "test/sia-r83/rule.spec.tsx"
   ],
