--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -108,6 +108,7 @@
     "src/sia-r82/rule.ts",
     "src/sia-r83/rule.ts",
     "src/sia-r84/rule.ts",
+    "src/sia-r85/rule.ts",
     "src/sia-r9/rule.ts",
     "test/common/evaluate.ts",
     "test/common/oracle.ts",
@@ -134,7 +135,8 @@
     "test/sia-r81/rule.spec.tsx",
     "test/sia-r82/rule.spec.tsx",
     "test/sia-r83/rule.spec.tsx",
-    "test/sia-r84/rule.spec.tsx"
+    "test/sia-r84/rule.spec.tsx",
+    "test/sia-r85/rule.spec.tsx"
   ],
   "references": [
     {
