Improve table building (#237)
* Add slots array to tables
* Factor out slot update code
* Update slots when updating table
* Move area covering test to table
* Reduce footprint from table to cell
* Stop recomputing col/row group headers a gazillion times
* Stop exposing mutable structures
* Use set instead of array for implicit headers computation
* Replace arrays by lists for private values
* Use non-mutable structures
* Use non-mutable storage
* Accept any iterable in constructors
* Use packed array for frequent access

--- a/packages/alfa-table/tsconfig.json
+++ b/packages/alfa-table/tsconfig.json
@@ -40,6 +40,9 @@
       "path": "../alfa-json"
     },
     {
+      "path": "../alfa-list"
+    },
+    {
       "path": "../alfa-math"
     },
     {
@@ -47,6 +50,9 @@
     },
     {
       "path": "../alfa-predicate"
+    },
+    {
+      "path": "../alfa-set"
     }
   ]
 }
