Get DOM compiling

--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -28,6 +28,7 @@
     "@siteimprove/alfa-mapper": "^0.5.0",
     "@siteimprove/alfa-option": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
+    "@siteimprove/alfa-refinement": "^0.5.0",
     "@siteimprove/alfa-sequence": "^0.5.0",
     "@siteimprove/alfa-trampoline": "^0.5.0"
   },
