Make XPath compile

--- a/packages/alfa-xpath/tsconfig.json
+++ b/packages/alfa-xpath/tsconfig.json
@@ -41,6 +41,9 @@
       "path": "../alfa-predicate"
     },
     {
+      "path": "../alfa-refinement"
+    },
+    {
       "path": "../alfa-result"
     },
     {
