--- a/packages/alfa-selector/package.json
+++ b/packages/alfa-selector/package.json
@@ -26,6 +26,7 @@
     "@siteimprove/alfa-option": "^0.5.0",
     "@siteimprove/alfa-parser": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
+    "@siteimprove/alfa-refinement": "^0.5.0",
     "@siteimprove/alfa-result": "^0.5.0",
     "@siteimprove/alfa-slice": "^0.5.0"
   },
