--- a/packages/alfa-cascade/tsconfig.json
+++ b/packages/alfa-cascade/tsconfig.json
@@ -35,6 +35,9 @@
       "path": "../alfa-predicate"
     },
     {
+      "path": "../alfa-refinement"
+    },
+    {
       "path": "../alfa-selector"
     },
     {
