--- a/packages/alfa-table/package.json
+++ b/packages/alfa-table/package.json
@@ -28,6 +28,7 @@
     "@siteimprove/alfa-math": "^0.5.0",
     "@siteimprove/alfa-option": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
+    "@siteimprove/alfa-refinement": "^0.5.0",
     "@siteimprove/alfa-result": "^0.5.0",
     "@siteimprove/alfa-sequence": "^0.5.0",
     "@siteimprove/alfa-set": "^0.5.0"
