--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -35,6 +35,7 @@
     "@siteimprove/alfa-mapper": "^0.5.0",
     "@siteimprove/alfa-option": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
+    "@siteimprove/alfa-refinement": "^0.5.0",
     "@siteimprove/alfa-sequence": "^0.5.0",
     "@siteimprove/alfa-set": "^0.5.0",
     "@siteimprove/alfa-style": "^0.5.0",
