Make `alfa-rules` compile

--- a/packages/alfa-rules/tsconfig.json
+++ b/packages/alfa-rules/tsconfig.json
@@ -211,6 +211,9 @@
       "path": "../alfa-record"
     },
     {
+      "path": "../alfa-refinement"
+    },
+    {
       "path": "../alfa-result"
     },
     {
