--- a/packages/alfa-rules/package.json
+++ b/packages/alfa-rules/package.json
@@ -40,6 +40,7 @@
     "@siteimprove/alfa-option": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
     "@siteimprove/alfa-record": "^0.5.0",
+    "@siteimprove/alfa-refinement": "^0.5.0",
     "@siteimprove/alfa-result": "^0.5.0",
     "@siteimprove/alfa-sequence": "^0.5.0",
     "@siteimprove/alfa-set": "^0.5.0",
