Make integrations compile

--- a/packages/alfa-chai/tsconfig.json
+++ b/packages/alfa-chai/tsconfig.json
@@ -19,7 +19,7 @@
       "path": "../alfa-mapper"
     },
     {
-      "path": "../alfa-predicate"
+      "path": "../alfa-refinement"
     },
     {
       "path": "../alfa-test"
