--- a/packages/alfa-jquery/tsconfig.json
+++ b/packages/alfa-jquery/tsconfig.json
@@ -16,7 +16,7 @@
       "path": "../alfa-option"
     },
     {
-      "path": "../alfa-predicate"
+      "path": "../alfa-refinement"
     },
     {
       "path": "../alfa-test"
