--- a/packages/alfa-react/tsconfig.json
+++ b/packages/alfa-react/tsconfig.json
@@ -35,7 +35,7 @@
       "path": "../alfa-option"
     },
     {
-      "path": "../alfa-predicate"
+      "path": "../alfa-refinement"
     },
     {
       "path": "../alfa-test"
