--- a/packages/alfa-vue/tsconfig.json
+++ b/packages/alfa-vue/tsconfig.json
@@ -38,7 +38,7 @@
       "path": "../alfa-option"
     },
     {
-      "path": "../alfa-predicate"
+      "path": "../alfa-refinement"
     },
     {
       "path": "../alfa-test"
