--- a/packages/alfa-jest/tsconfig.json
+++ b/packages/alfa-jest/tsconfig.json
@@ -13,7 +13,7 @@
       "path": "../alfa-mapper"
     },
     {
-      "path": "../alfa-predicate"
+      "path": "../alfa-refinement"
     },
     {
       "path": "../alfa-sequence"
