--- a/packages/alfa-puppeteer/tsconfig.json
+++ b/packages/alfa-puppeteer/tsconfig.json
@@ -22,7 +22,7 @@
       "path": "../alfa-option"
     },
     {
-      "path": "../alfa-predicate"
+      "path": "../alfa-refinement"
     },
     {
       "path": "../alfa-test"
