--- a/packages/alfa-unexpected/tsconfig.json
+++ b/packages/alfa-unexpected/tsconfig.json
@@ -10,7 +10,7 @@
       "path": "../alfa-mapper"
     },
     {
-      "path": "../alfa-predicate"
+      "path": "../alfa-refinement"
     },
     {
       "path": "../alfa-test"
