Progress on `URL` type

--- a/packages/alfa-cli/tsconfig.json
+++ b/packages/alfa-cli/tsconfig.json
@@ -91,6 +91,9 @@
       "path": "../alfa-time"
     },
     {
+      "path": "../alfa-url"
+    },
+    {
       "path": "../alfa-web"
     },
     {
