--- a/packages/alfa-cli/package.json
+++ b/packages/alfa-cli/package.json
@@ -35,6 +35,7 @@
     "@siteimprove/alfa-rules": "^0.5.0",
     "@siteimprove/alfa-scraper": "^0.5.0",
     "@siteimprove/alfa-time": "^0.5.0",
+    "@siteimprove/alfa-url": "^0.5.0",
     "@siteimprove/alfa-web": "^0.5.0",
     "@siteimprove/alfa-xpath": "^0.5.0",
     "@types/node": "^14.0.12",
