--- a/packages/alfa-crawler/package.json
+++ b/packages/alfa-crawler/package.json
@@ -23,6 +23,7 @@
     "@siteimprove/alfa-mapper": "^0.5.0",
     "@siteimprove/alfa-result": "^0.5.0",
     "@siteimprove/alfa-scraper": "^0.5.0",
+    "@siteimprove/alfa-url": "^0.5.0",
     "@siteimprove/alfa-web": "^0.5.0"
   },
   "devDependencies": {
