--- a/packages/alfa-frontier/package.json
+++ b/packages/alfa-frontier/package.json
@@ -21,7 +21,8 @@
     "@siteimprove/alfa-equatable": "^0.5.0",
     "@siteimprove/alfa-json": "^0.5.0",
     "@siteimprove/alfa-option": "^0.5.0",
-    "@siteimprove/alfa-predicate": "^0.5.0"
+    "@siteimprove/alfa-predicate": "^0.5.0",
+    "@siteimprove/alfa-url": "^0.5.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.5.0"
