--- a/packages/alfa-http/package.json
+++ b/packages/alfa-http/package.json
@@ -25,7 +25,8 @@
     "@siteimprove/alfa-json": "^0.5.0",
     "@siteimprove/alfa-map": "^0.5.0",
     "@siteimprove/alfa-option": "^0.5.0",
-    "@siteimprove/alfa-refinement": "^0.5.0"
+    "@siteimprove/alfa-refinement": "^0.5.0",
+    "@siteimprove/alfa-url": "^0.5.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.5.0"
