--- a/packages/alfa-url/tsconfig.json
+++ b/packages/alfa-url/tsconfig.json
@@ -1,10 +1,16 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
   "extends": "../tsconfig.json",
-  "files": ["src/frontier.ts", "src/index.ts", "test/frontier.spec.ts"],
+  "files": ["src/index.ts", "src/url.ts", "test/url.spec.ts"],
   "references": [
     {
       "path": "../alfa-equatable"
+    },
+    {
+      "path": "../alfa-hash"
+    },
+    {
+      "path": "../alfa-iterable"
     },
     {
       "path": "../alfa-json"
@@ -13,13 +19,13 @@
       "path": "../alfa-option"
     },
     {
-      "path": "../alfa-predicate"
+      "path": "../alfa-result"
+    },
+    {
+      "path": "../alfa-sequence"
     },
     {
       "path": "../alfa-test"
-    },
-    {
-      "path": "../alfa-url"
     }
   ]
 }
