--- a/packages/alfa-json-ld/package.json
+++ b/packages/alfa-json-ld/package.json
@@ -19,7 +19,8 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-option": "^0.5.0",
-    "@siteimprove/alfa-result": "^0.5.0"
+    "@siteimprove/alfa-result": "^0.5.0",
+    "@siteimprove/alfa-url": "^0.5.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.5.0"
