--- a/packages/alfa-result/package.json
+++ b/packages/alfa-result/package.json
@@ -21,6 +21,7 @@
     "@siteimprove/alfa-equatable": "^0.5.0",
     "@siteimprove/alfa-foldable": "^0.5.0",
     "@siteimprove/alfa-functor": "^0.5.0",
+    "@siteimprove/alfa-hash": "^0.5.0",
     "@siteimprove/alfa-json": "^0.5.0",
     "@siteimprove/alfa-mapper": "^0.5.0",
     "@siteimprove/alfa-monad": "^0.5.0",
