Add additional `Iterable` functions

--- a/packages/alfa-iterable/tsconfig.json
+++ b/packages/alfa-iterable/tsconfig.json
@@ -7,6 +7,9 @@
       "path": "../alfa-equatable"
     },
     {
+      "path": "../alfa-hash"
+    },
+    {
       "path": "../alfa-mapper"
     },
     {
