--- a/packages/alfa-iterable/package.json
+++ b/packages/alfa-iterable/package.json
@@ -19,6 +19,7 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-equatable": "^0.5.0",
+    "@siteimprove/alfa-hash": "^0.5.0",
     "@siteimprove/alfa-mapper": "^0.5.0",
     "@siteimprove/alfa-option": "^0.5.0",
     "@siteimprove/alfa-predicate": "^0.5.0",
