--- a/packages/alfa-graph/package.json
+++ b/packages/alfa-graph/package.json
@@ -22,7 +22,7 @@
     "@siteimprove/alfa-iterable": "^0.5.0",
     "@siteimprove/alfa-json": "^0.5.0",
     "@siteimprove/alfa-map": "^0.5.0",
-    "@siteimprove/alfa-option": "^0.5.0",
+    "@siteimprove/alfa-sequence": "^0.5.0",
     "@siteimprove/alfa-set": "^0.5.0"
   },
   "devDependencies": {
